# text-to-control

./: .env-example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  agents.py  app.py  config.py  demo-app.py  justfile  main.py  main_app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.streamlit/: secrets-example.toml
app/: access_control.py  app.py  auth_demo.py  backend_interface.py  stylesheet.css  stylesheet1.css  stylesheet2.css
examples/: allocation_problem.txt  cd_cost_opt.txt  farm-resource-allocation.txt  industrial_heating_process.txt  pid_tuning.txt  transport_problem.txt
src/: __init__.py
src/agents/: __init__.py  base.py  expert.py  integrator.py  validator.py
src/instructions/: expert.md  integrator.md  validator.md
tests/: test_main_smoke.py
