[project]
name = "text-to-control"
version = "0.1.0"
description = "Agent-based framework for automated control system design"
readme = "README.md"
authors = [
    { name = "Marek Wadinger", email = "marekwadinger5506@gmail.com" },
    { name = "Adriána Bartková", email = "adrianka.bartkova48@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[google]>=1.0.15",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
lint = [
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
